<resources>
    <string name="app_name">SanApp</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Test1</string>
    <string name="title_notifications">Information</string>
    <string name="title_activity_gps">Map</string>
    <string name="arte">Arte</string>
    <string name="rutas">Rutas</string>
    <string name="alojamiento">Alojamiento</string>
    <string name="bares_y_resturantes">Bares y Resturantes</string>
    <string name="mapa">Mapa</string>
    <string name="servicios">Servicios</string>


</resources>
